# m365-it-manager

./: .env.example  .gitignore  CHANGELOG.md  CONTRIBUTING-CURSOR.md  MVP_TASKS.md  README.md  ROADMAP.md  STRUCTURE_CHANGE.md  STRUCTURE_v1.0.md
.cursor/: mcp.json
.cursor/prompts/: DEBUG.mdc  PLAN.mdc  REVIEW.mdc
.cursor/rules/: 00-ground-rules.mdc  01-frontend-standards.mdc  02-backend-standards.mdc  03-graph-api-usage.mdc  04-db-standards.mdc  05-infra-standards.mdc  06-testing.mdc  07-docs-style.mdc
.github/workflows/: ci-backend.yml  ci-frontend.yml  release.yml
DECISIONS/: 0001-architecture.md  0002-auth-permissions.md
backend/: pyproject.toml  pytest.ini  requirements.txt
backend/app/: main.py
backend/app/routers/: licenses.py  mailbox.py  mfa.py  teams.py  users.py
backend/app/services/: graph_client.py
backend/tests/: test_health.py  test_users.py
docs/: API_SPEC.md  APPREG_CHECKLIST.md  ARCHITECTURE.md  CI_STRUCTURE_GATES.md  DEPLOYMENT_AZURE.md  PERMISSIONS.md  UX_WIREFRAMES.md
frontend/: .eslintrc.cjs  index.html  package.json  src-shadcn.config.ts
frontend/src/: app.tsx  index.css  main.tsx
frontend/src/components/: DataTable.tsx
frontend/src/lib/: api.ts
frontend/src/pages/: Dashboard.tsx  Licenses.tsx  MFA.tsx  Mailbox.tsx  Teams.tsx  Users.tsx
infra/: azure-appservice.bicep  keyvault-secrets.json
infra/scripts/: deploy_api.sh  deploy_web.sh  seed_keyvault.sh
tools/mcp/graph/: README.md  manifest.json
tools/mcp/repo/: manifest.json
tools/mcp/reporter/: manifest.json
